name:                npm2nix-ng
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jude Taylor
maintainer:          me@jude.bio
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

executable npm2nix
  main-is:             Main.hs
  build-depends:       base
                     , HsOpenSSL
                     , aeson
                     , ansi-terminal
                     , base64-bytestring
                     , bytestring
                     , containers
                     , directory
                     , exceptions
                     , filepath
                     , http-client-openssl
                     , lens
                     , lens-aeson
                     , lifted-async
                     , lifted-base
                     , monad-control
                     , mtl
                     , network-uri
                     , optparse-applicative
                     , process
                     , process-extras
                     , semver-range >= 0.2
                     , temporary
                     , text
                     , transformers
                     , trifecta
                     , utf8-string
                     , unordered-containers
                     , wreq
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
